[BugFix] Lake IDG: fix 3-list constructor erasure clash on LakeTableDropIndexJob
The previous DROP-by-name fix added a 3-list canonical constructor
(List<Long>, List<String>, List<TDropIndexInfo>) and kept a 3-list
backward-compat overload (List<Long>, List<TDropIndexInfo>, List<String>).
Java's type erasure collapses both to (long, long, long, String, long,
List, List, List) — name clash at compile time.

Drop the no-names overload that took dropBfColumns; update the four
test sites that used it to pass the canonical 4-list form with an
explicit empty names list. Document the erasure constraint at the
constructor doc.

Signed-off-by: meegoo <mervin.hu@celerdata.com>

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>